# fog-of-war

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: README.md  pyproject.toml
agent/app/: __init__.py  main.py  prompts.py  tools.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  styles.css
mcp-server/: README.md  pyproject.toml
mcp-server/app/: __init__.py  main.py
mcp-server/historical_battle_analyzer_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
